// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate client 1`] = `
import { http as rpc$0 } from '@midwayjs/rpc';

export function get(...args) {
  const route = {
    trigger: { type: 'HTTP', method: 'GET', path: '/get' },
    functionId: 'index-get',
    hasMetadataInput: false,
  };
  return rpc$0(route, ...args);
}

export function post(...args) {
  const route = {
    trigger: { type: 'HTTP', method: 'POST', path: '/post' },
    functionId: 'index-post',
    hasMetadataInput: false,
  };
  return rpc$0(route, ...args);
}

export function put(...args) {
  const route = {
    trigger: { type: 'HTTP', method: 'PUT', path: '/put' },
    functionId: 'index-put',
    hasMetadataInput: false,
  };
  return rpc$0(route, ...args);
}

export function del(...args) {
  const route = {
    trigger: { type: 'HTTP', method: 'DELETE', path: '/del' },
    functionId: 'index-del',
    hasMetadataInput: false,
  };
  return rpc$0(route, ...args);
}

export function patch(...args) {
  const route = {
    trigger: { type: 'HTTP', method: 'PATCH', path: '/patch' },
    functionId: 'index-patch',
    hasMetadataInput: false,
  };
  return rpc$0(route, ...args);
}

export function head(...args) {
  const route = {
    trigger: { type: 'HTTP', method: 'HEAD', path: '/head' },
    functionId: 'index-head',
    hasMetadataInput: false,
  };
  return rpc$0(route, ...args);
}

export function options(...args) {
  const route = {
    trigger: { type: 'HTTP', method: 'OPTIONS', path: '/options' },
    functionId: 'index-options',
    hasMetadataInput: false,
  };
  return rpc$0(route, ...args);
}

export default function $default(...args) {
  const route = {
    trigger: { type: 'HTTP', method: 'ALL', path: '/' },
    functionId: 'index',
    hasMetadataInput: false,
  };
  return rpc$0(route, ...args);
}

`;

exports[`with requestClient generate client 1`] = `
"import { http as rpc$0 } from '@midwayjs/rpc';
import { ws as rpc$1 } from '@midwayjs/rpc';

export function get(...args) {
  const route = {
    trigger: { type: 'HTTP', method: 'GET', path: '/server/api/get' },
    functionId: 'server-api-index-get',
    hasMetadataInput: false,
  };
  return rpc$0(route, ...args);
}

export function custom(...args) {
  const route = {
    trigger: { type: 'Custom', isCustom: true },
    functionId: 'server-api-index-custom',
    hasMetadataInput: false,
  };
  return rpc$1(route, ...args);
}
"
`;

exports[`with requestClient generate multi client 1`] = `
import { http as rpc$0 } from '@midwayjs/rpc';
import { cloud as rpc$1 } from 'cloud-invoker';

export function get(...args) {
  const route = {
    trigger: { type: 'HTTP', method: 'GET', path: '/server/api/get' },
    functionId: 'server-api-index-get',
    hasMetadataInput: false,
  };
  return rpc$0(route, ...args);
}

export function custom(...args) {
  const route = {
    trigger: { type: 'Custom', isCustom: true },
    functionId: 'server-api-index-custom',
    hasMetadataInput: false,
  };
  return rpc$1(route, ...args);
}

`;
